name:                mu-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/millennial-utopia/millennial-utopia.github.io
license:             BSD3
license-file:        LICENSE
author:              Will J
maintainer:          maintainer@willj.dev
copyright:           2025 Will J
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable willj-dev-ghpages
  main-is:             Main.hs
  other-modules:       Site,
                       Site.Common,
                       Site.Config,
                       Site.Home,
                       Site.Lemontopia,
                       Site.Page,
                       Site.Pandoc,
                       Site.Section,
                       Site.Terms,
                       Site.Theory,
                       Debug
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, RankNTypes
  ghc-options:         -threaded -Wall
  build-depends:       base,
                       aeson,
                       binary,
                       bytestring,
                       containers,
                       data-default,
                       filepath,
                       hakyll,
                       mtl,
                       pandoc,
                       pandoc-types,
                       text,
                       yaml,
                       blaze-markup,
                       blaze-html
